--- a/PotionShop/PotionShop/Components/Layout/Pages/Recipes.razor
+++ b/PotionShop/PotionShop/Components/Layout/Pages/Recipes.razor
@@ -32,7 +32,7 @@ else
                 <tr>
                     <td>@recipes.Result</td>
                     <td>
-                        @recipes.MainIngredient
+                        @recipes.Ingredient?.Name
                     </td>
                     <td>@recipes.Stock</td>
                     <td>@recipes.WarehouseLocation</td>
